[project]
name = "hello_agent"
version = "0.1.0"
description = "A simple agent using Gemini API"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",  # Required for AsyncOpenAI
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

